--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,397 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 90px;
+  z-index: 1000;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: gray;
+  transition: all 0.2s;
+  width: auto;
+}
+
+.navbar a:hover {
+  color: black;
+  font-weight: 1000;
+}
+
+h1 {
+  font-size: 800%;
+}
+
+h3 {
+  font-size: 300%;
+}
+
+p {
+  font-size: 180%;
+}
+
+img {
+  box-shadow: 10px 10px 40px 0px rgba(0, 0, 0, 0.5);
+}
+
+.section-one {
+  display: flex;
+  width: 100%;
+  height: auto;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  margin: 5% 0;
+}
+
+#cta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 48%;
+  height: auto;
+  padding: 2%;
+}
+
+#img-1 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 48%;
+  height: auto;
+}
+
+.logo {
+  box-shadow: none;
+}
+
+#img-1 img {
+  width: 75%;
+  height: auto;
+  box-shadow: none;
+}
+
+.ln-break {
+  border: solid 2px black;
+  margin: 2% 5%;
+}
+
+.btn {
+  font-family: "Titillium Web", sans-serif;
+  width: 30%;
+  border: solid 1px black;
+  background: white;
+  font-size: large;
+  transition: all 0.3s;
+  box-shadow: 10px 10px 40px 0px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+#btn:hover {
+  color: white;
+  background: black;
+  cursor: pointer;
+}
+
+.about {
+  display: flex;
+  justify-content: space-between;
+  margin: 5%;
+}
+
+.about div {
+  width: 48%;
+}
+
+.full-img {
+  margin: 0 5%;
+  width: 90%;
+}
+
+.services {
+  display: flex;
+  justify-content: space-between;
+  margin: 5%;
+}
+
+.services div {
+  margin-right: 5%;
+  width: 31%;
+}
+
+.services div:last-child {
+  margin-right: 0;
+}
+
+address {
+  margin: 5%;
+}
+
+footer {
+  margin: 5%;
+  text-align: center;
+}
+
+.mg-btm {
+  margin-bottom: 2%;
+}
+
+.mg-btm-1 {
+  margin-bottom: 5%;
+}
+
+.service {
+  margin: 0 5%;
+}
+
+.service-brkdwn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  border: 1px solid black;
+  width: 48%;
+  background: rgb(204, 233, 245);
+  padding: 5%;
+  box-shadow: 10px 10px 40px 0px rgba(0, 0, 0, 0.5);
+}
+
+.service-facts {
+  margin: 0 5%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#facts {
+  width: 48%;
+}
+
+.services-info-img {
+  width: 48%;
+}
+
+ul li {
+  list-style-type: square;
+  font-size: 200%;
+  margin: 5%;
+}
+
+@media only screen and (max-width: 800px) {
+
+    h1 {
+        font-size: 500%;
+    }
+    .navbar{
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap-reverse;
+    }
+
+    .navbar a {
+        margin: 0 5%;
+    }
+
+    #img {
+        display: inline-block;
+        width: 100%;
+        margin: 2% 0;
+        margin-left: 40%;
+        
+    }
+
+    #img-1 {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+  .service-brkdwn {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .card {
+    width: 100%;
+    margin-top: 2%;
+  }
+}
+
+.contact {
+  margin: 0 5%;
+  width: 90%;
+}
+
+.container {
+  margin: 0 5%;
+  background: rgb(204, 233, 245);
+  padding: 5%;
+  border: 1px solid black;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
