--- a/css/index.css
+++ b/css/index.css
@@ -378,24 +378,28 @@ ul li {
   .navbar {
     flex-direction: column;
     flex-wrap: nowrap;
-    align-items: flex-start;
-    margin: 5% 0;
+    margin-bottom: 70%;
   }
 
   .navbar a {
+    border-bottom: solid 1px gray;
+    width: 100%;
     display: flex;
     justify-content: center;
-    width: 100%;
-    border-bottom: solid 1px gray;
-    margin: 2% 0;
+    padding: 5% 0;
+  }
+
+  #img {
+    margin: 0;
+    margin-top: 80%;
   }
 
   #cta {
     margin-top: 20%;
   }
 
- 
 
+  
 
 
 
