added padding to address element

--- a/css/index.css
+++ b/css/index.css
@@ -421,6 +421,10 @@ ul li {
     margin: 2% 0;
   }
 
+  address {
+    padding-top: 5%;
+  }
+
   .service-brkdwn {
     display: flex;
     flex-direction: column;
